--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
         <meta name="description" content="Kaiken's Blog page">
-        <link rel="stylesheet" href="index.css">
+        <link rel="stylesheet" href="style_index.css">
         <title>Kaiken's Blog</title>
         <link rel="icon" href="icon.ico">
     </head>
