--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
         <meta name="description" content="Kaiken's Blog page">
-        <link rel="stylesheet" href="style_index.css">
+        <link rel="stylesheet" href="index.css">
         <title>Kaiken's Blog</title>
         <link rel="icon" href="icon.ico">
     </head>
@@ -12,7 +12,7 @@
         <header>
             <section>
                 <span><a href="index.html"> <img id="image_logo" src="icon.png" alt=""></a></span>
-                <h4><img id="kaiken" src="kaiken.png" alt=""></h4>
+                <span><img id="kaiken" src="kaiken.png" alt=""></span>
             </section>
             
             <section>
