--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="description" content="Kaiken's Blog page">
         <link rel="stylesheet" href="style_index.css">
         <title>Kaiken's Blog</title>
-        <link rel="icon" href="icon.ico">
+        <link rel="icon" href="icon.png">
     </head>
     <body style="background-color: white;">
         <header>
